fixing spacing layout

--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -14,36 +14,41 @@ html {
   display: flex;
   align-items: center;
   flex-flow: column nowrap;
+  justify-content: space-between;
   height: 100vh;
   width: 100vw;
-  gap: 20px;
   color: var(--text-color--dark-mode);
   background-color: var(--bg-primary);
+  gap: 20px;
 }
 
 .container__navegation-bar {
   outline: 1px solid white;
-
-  height: 30px;
+  position: fixed;
+  top: 0px;
+  width: 100%;
+  height: 50px;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
-}
-
-.container__bar {
-  height: 25px;
-  padding: 5px;
-  border-radius: 10px;
-  outline: 1px solid white;
+  justify-self: flex-start;
 }
 
 .container__perfile {
+  margin-top: 70px;
   outline: 1px solid white;
-
+  width: 80%;
   height: 150px;
   padding: 10px;
   border-radius: 10px;
 }
 
+.container__bar {
+  width: 80%;
+  height: 50px;
+  padding: 5px;
+  border-radius: 10px;
+  outline: 1px solid white;
+}
 
 
 
@@ -51,9 +56,11 @@ html {
 
   outline: 1px solid white;
   padding: 30px;
+  width: 80%;
   height: 250px;
   border: none;
   border-radius: 30px;
+  margin-bottom: 30px;
 }
 
 .button {
@@ -70,7 +77,7 @@ html {
   color: var(--text-color--dark-mode--secondary);
   transition: ease-in-out 200ms;
 
-  &:hover {
+  &:active {
     color: rgb(94, 255, 0);
     outline: 3px solid rgba(0, 255, 110, 0.719);
   }
